# QuakeScraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
QuakeScraper/: __init__.py  utils.py
src/QuakeScraper_snufomechanic/: __init__.py  earthquake_scraper.py
test/: test.py
