[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "QuakeScraper_snrufomechanic"
version = "0.0.1"
authors = [{ name = "snrufomechanic", email = "anil.oz@icloud.com" }]
description = "A Python package for scraping earthquake data from Kandilli Observatory and Earthquake Research Institute (KOERI) and extracting useful information."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['requests', 'beautifulsoup4', 'pandas']

[project.urls]
Homepage = "https://github.com/snrufomechanic/QuakeScraper"
Issues = "https://github.com/snrufomechanic/QuakeScraper/issues"
